--- a/style.css
+++ b/style.css
@@ -155,7 +155,9 @@ main {
   height: 10rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
-
+.pink{
+ color: #ff00ff;
+}
 .player--winner {
   background-color: #2f2f2f;
 }
@@ -166,12 +168,89 @@ main {
 }
 
 
+/* About Game */
+
+
+.show-modal {
+  justify-self: flex-end;
+  align-self: flex-end;
+  margin: 30px;
+  font-weight: 500;
+  border: none;
+  background-color: #fff;
+  color: #c7365f;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 10px;
+  box-shadow: 1px -3px 10px 5px rgba(0, 0, 0, 0.3);
+}
+
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.modal h1 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.modal .rules{
+  font-weight: 300;
+}
+
+.modal .rules .rule{
+
+  list-style-image: url(https://www.w3schools.com/css/sqpurple.gif);
+  margin-bottom: 5px;
+}
+.modal .developer{
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-top: 20px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+
 .hidden{
   display: none;
 }
 .warn{
   display: none;
 }
+
+
 
 @media screen and (max-width: 680px) {
   main{
