Added these files

--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+}
+.main_body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.main_body button {
+  justify-self: center;
 }
 
 /* LAYOUT */
@@ -60,7 +71,6 @@ main {
   color: #c7365f;
   margin-bottom: auto;
 }
-
 
 .player--active {
   background-color: rgba(255, 255, 255, 0.4);
@@ -109,7 +119,7 @@ main {
   font-family: inherit;
   font-size: 1.8rem;
   text-transform: uppercase;
-  
+
   font-weight: 400;
   transition: all 0.2s;
 
@@ -155,8 +165,8 @@ main {
   height: 10rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
-.pink{
- color: #ff00ff;
+.pink {
+  color: #ff00ff;
 }
 .player--winner {
   background-color: #2f2f2f;
@@ -167,13 +177,11 @@ main {
   color: #c7365f;
 }
 
-
 /* About Game */
 
-
 .show-modal {
-  justify-self: flex-end;
-  align-self: flex-end;
+  justify-self: center;
+  align-self: center;
   margin: 30px;
   font-weight: 500;
   border: none;
@@ -184,7 +192,6 @@ main {
   padding: 10px;
   box-shadow: 1px -3px 10px 5px rgba(0, 0, 0, 0.3);
 }
-
 
 .close-modal {
   position: absolute;
@@ -207,7 +214,8 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 80%;
+  font-size: 40px;
   background-color: white;
   padding: 6rem;
   border-radius: 5px;
@@ -215,21 +223,27 @@ main {
   z-index: 10;
 }
 
-.modal .rules{
+.modal .rules,
+.rule {
   font-weight: 300;
+  font-size: 3rem;
 }
 
-.modal .rules .rule{
-
+.modal .rules .rule {
   list-style-image: url(https://www.w3schools.com/css/sqpurple.gif);
   margin-bottom: 5px;
 }
-.modal .developer{
+.modal .developer {
   display: flex;
   width: 100%;
   justify-content: flex-end;
   align-items: flex-end;
   padding-top: 20px;
+}
+.modal .developer a {
+  text-decoration: none;
+  color: blue;
+  font-size: inherit;
 }
 .overlay {
   position: absolute;
@@ -242,21 +256,18 @@ main {
   z-index: 5;
 }
 
-
-.hidden{
+.hidden {
   display: none;
 }
-.warn{
+.warn {
   display: none;
 }
-
-
 
 @media screen and (max-width: 680px) {
-  main{
-      display: none;
+  main {
+    display: none;
   }
-  .warn{
+  .warn {
     padding: 20px;
     box-shadow: 1px -2px 10px 5px rgba(0, 0, 0, 0.5);
     display: block;
@@ -267,16 +278,16 @@ main {
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     background-color: #2f2f2f;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     border-radius: 3px;
-
   }
   @keyframes anime {
-    0%{
+    0% {
       color: #fff;
     }
-    100%{
+    100% {
       color: red;
       background-color: #fff;
     }
